--- a/content/test/md/2.md
+++ b/content/test/md/2.md
@@ -1,6 +1,7 @@
 ---
 id: installation
-title: Installation
+title: test-2
+slug: test-2
 ---
 
 Docusaurus is essentially a set of npm [packages](https://github.com/facebook/docusaurus/tree/master/packages).
