--- a/content/mdx/design/index.mdx
+++ b/content/mdx/design/index.mdx
@@ -6,7 +6,9 @@ import { Icon } from "@components/icons"
 
 ## 1. Logo
 
-None. Currently, I'm using a react-icon as a placeholder.
+<div style="width: 200px; height: 200px; margin-bottom: 50px;">
+  <Icon name="logo" />
+</div>
 
 ## 2. Colors
 
@@ -255,3 +257,17 @@ ls -las
 cd ~/Dropbox/ps
 nvim -S ps.vim
 ```
+
+<div
+  style="
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  width: 100%; 
+  height: 250px; 
+  margin-top: 80px;
+  margin-bottom: 20px;
+  "
+>
+  <Icon name="jellyppi2" />
+</div>
