--- a/content/mdx/design/index.mdx
+++ b/content/mdx/design/index.mdx
@@ -7,7 +7,7 @@ import { Icon } from "@components/icons"
 ## 1. Logo
 
 <div style="width: 200px; height: 200px; margin-bottom: 50px;">
-  <Icon name="logo" />
+  <Icon name="jellyppi" />
 </div>
 
 ## 2. Colors
@@ -229,6 +229,12 @@ fn main() {
 }
 ```
 
+```json
+{
+  "foo": "bar"
+}
+```
+
 ### With title
 
 ```js:title=example-file.js
@@ -257,6 +263,14 @@ ls -las
 cd ~/Dropbox/ps
 nvim -S ps.vim
 ```
+
+```shell
+nvm --version
+```
+
+## 6. Blockquote
+
+> This is a blockquote
 
 <div
   style="
