--- a/content/mdx/design/index.mdx
+++ b/content/mdx/design/index.mdx
@@ -1,8 +1,9 @@
-import { theme } from "@theme"
 import { Icon } from "@components/icons"
 import MdxLayout from "@components/layout/mdx-layout"
+import { Article } from "@styles/pages/blog/post.styles"
 
 <MdxLayout>
+<Article>
 
 # Design System
 
@@ -279,4 +280,5 @@ nvm --version
   <Icon name="jellyppi2" />
 </div>
 
+</Article>
 </MdxLayout>
