--- a/content/mdx/boj/13335/index.mdx
+++ b/content/mdx/boj/13335/index.mdx
@@ -27,9 +27,9 @@ import { Container, Title, Article } from "@styles/pages/blog/post.styles"
 
 [문제](https://www.acmicpc.net/problem/13335)
 
-<p></p>
+<p>`큐`를 `사용해` 다리를 시뮬레이션 한다.</p>
 
-```cpp{numberLines: true}
+```cpp
 #include <bits/stdc++.h>
 
 using namespace std;
@@ -37,6 +37,42 @@ using namespace std;
 int main(void) {
   cin.tie(nullptr)->sync_with_stdio(false);
   cin.exceptions(ios::badbit | ios::failbit);
+
+  int n, len, limit;
+  cin >> n >> len >> limit;
+
+  vector<int> weight(n);
+
+  for (auto &x : weight)
+    cin >> x;
+
+  int ans = 0;
+  queue<int> q;
+
+  for (int i = 0, w_sum = 0; i < n; ans++) {
+    // A truck has passed the bridge!
+    if ((int)q.size() == len) {
+      int w = q.front();
+      q.pop();
+      w_sum -= w;
+    }
+
+    // Can we send the ith truck?
+    if (int w = weight[i]; w_sum + w <= limit) {
+      q.push(w);
+      w_sum += w;
+      i++;
+      continue;
+    }
+
+    // If not, lets simulate by sending a truck that weighs 0.
+    // highlight-next-line
+    q.push(0);
+  }
+
+  // We don't care how many trucks are on the bridge.
+  // The last truck takes 'len' to pass the bridge.
+  cout << ans + len;
 }
 ```
 
