--- a/content/mdx/boj/13335/index.mdx
+++ b/content/mdx/boj/13335/index.mdx
@@ -34,7 +34,7 @@ import { Container, Title, Article } from "@styles/pages/blog/post.styles"
   최대하중을 넘지 않으면 실제 트럭을 담고, 넘으면 dummy 트럭을 담는다. 단위시간
   마다 단위길이 만큼 이동하는 것을 시뮬레이션하기 위해 dummy 트럭을 담는다. 실제
   구현에서는 다리위에 올라가 있는 트럭들의 무게 정보를 유지하기 위해 큐에 트럭의
-  무게를 담는다 (dummy 트럭의 무게는 0).
+  무게를 담는다 (dummy 트럭의 무게는 $0$).
 </p>
 
 ```cpp
@@ -84,6 +84,11 @@ int main(void) {
   cout << ans + len;
 }
 ```
+
+다리의 길이를 $L$, 트럭의 개수를 $W$라고 하면,
+
+- time complexity: $O(L * W)$
+- space complexity: $O(L)$
 
 </Article>
 </Container>
