--- a/content/mdx/boj/17836/index.mdx
+++ b/content/mdx/boj/17836/index.mdx
@@ -98,6 +98,11 @@ int main(void) {
 
 47번 줄에서 명검을 발견하면 48번 줄에서 맨해튼 거리를 사용해 기록한다.
 
+성의 크기를 $N * M$이라고 하면,
+
+- time complexity: $O(N * M)$
+- asymptotic space complexity: $O(N + M)$
+
 </Article>
 </Container>
 </MdxLayout>
