--- a/content/mdx/design/index.mdx
+++ b/content/mdx/design/index.mdx
@@ -1,8 +1,9 @@
-import { theme } from "@theme"
 import { Icon } from "@components/icons"
 import MdxLayout from "@components/layout/mdx-layout"
+import { Article } from "@styles/pages/blog/post.styles"
 
 <MdxLayout>
+<Article>
 
 # Design System
 
@@ -219,6 +220,28 @@ import * as React from "react"
 
 // highlight-next-line
 const MyComponent = () => <div>😎</div>
+
+// highlight-start
+console.log("Multi-line")
+console.log("highlighting!")
+// highlight-end
+```
+
+### Line numbering
+
+```javascript{numberLines: true}
+// In your gatsby-config.js
+plugins: [
+  {
+    resolve: `gatsby-transformer-remark`,
+    options: {
+      plugins: [
+        // highlight-next-line
+        `gatsby-remark-prismjs`,
+      ]
+    }
+  }
+]
 ```
 
 ### Shell
@@ -257,4 +280,5 @@ nvm --version
   <Icon name="jellyppi2" />
 </div>
 
+</Article>
 </MdxLayout>
